--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 				<a href='flexbox-col.html'>
 					<li>Column</li>
 				</a>
+				<a href='flexbox-application.html'>
+					<li>Application</li>
+				</a>
 			</ul>
 		</div>
 	</body>
