--- a/flexbox-intro.html
+++ b/flexbox-intro.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Flexbox Intro</title>
 		<link rel='stylesheet' href='base.css'>
+		<link href="prism2.css" rel="stylesheet">
 		<style type='text/css'>
 			div.box > p:nth-child(2) {
 				margin: 0em;
@@ -46,11 +47,14 @@
 			<br/>
 			The <b><span class='gray'>gray boxes</span></b> are automatically interpreted as flexbox items as they are directly inside the flexbox container.
 			<p>
-				Set the CSS rule <code>display: flex;</code> to an HTML element to make it a flexbox container.
+				Set the CSS rule to an HTML element to make it a flexbox container:
+				<pre class='language-css'><code>display: flex;</code></pre>
 			</p>
 			<p>
 				Now that you know the very basics, let's move over to do some cool stuff!
 			</p>
 		</div>
+
+		<script src="prism2.js"></script>
 	</body>
 </html>
