--- a/html-basics.html
+++ b/html-basics.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>HTML basics</title>
+		<title>HTML/CSS basics</title>
 		<link rel='stylesheet' href='base.css'>
 		<link href="prism2.css" rel="stylesheet">
 		<style type='text/css'>
@@ -24,7 +24,7 @@
 	</head>
 	<body>
 		<h1>
-			<center>HTML basics</center>
+			<center>HTML/CSS basics</center>
 		</h1>
 		<div class='box'>
 			Here we got a simple link:
@@ -61,14 +61,16 @@
 		<div class='box'>
 			Give some breathing space.
 			<br/>
-			Let's add some padding to increase the space inside it.
+			Let's add some padding to increase the space inside it:
 			<pre class='language-css'><code>padding: 0.3em 1em 0.3em 1em;</code></pre>
-			This CSS code sets top and bottom padding to 0.3em
-			<br/>
-			and left and right padding to 1em.
 		</div>
 		<div>
 			<a href='http://google.com' class='phase2 phase3 phase4 phase5'>Visit Google</a>
+		</div>
+		<div class='box'>
+			This CSS code sets top and bottom padding to 0.3em
+			<br/>
+			and left and right padding to 1em.
 		</div>
 		<div class='box'>
 			A little roundness wouldn't be bad, eh?
@@ -76,6 +78,10 @@
 		</div>
 		<div>
 			<a href='http://google.com' class='phase2 phase3 phase4 phase5 phase6'>Visit Google</a>
+		</div>
+
+		<div class='box'>
+			And before you realized it, we turned a simple anchor tag to a full fledged decent looking button!
 		</div>
 
 		<script src="prism2.js"></script>
