--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</h1>
 
 		<div class='box'>
-			<h3>HTML and CSS</h3>
+			<h3>HTML/CSS</h3>
 			<ol>
 				<a href='html-basics.html'>
 					<li>Basics</li>
