--- a/flexbox-application.html
+++ b/flexbox-application.html
@@ -1,193 +1,39 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Flexbox application</title>
-		<link rel='stylesheet' href='base.css'>
-		<link href="prism2.css" rel="stylesheet">
-		<style type='text/css'>
-			.phase2 {
-				list-style: none;
-			}
-			.phase3 {
-				padding: 0px;
-			}
-			.phase4 {
-				display: flex;
-			}
-			.phase5 {
-				background: #4286f4;
-			}
-			.phase6 {
-				padding: 1em;
-			}
-			.phase7 > li {
-				background: #F0F0F0;
-				padding: 0.5em;
-			}
-			.phase8 > li {
-				margin-right: 0.3em;
-			}
-			.phase9 > li {
-				border-radius: 3px;
-			}
+<!DOCTYPE html><html><head><title>Flexbox application</title><link rel="stylesheet" href="css/base.css"><link href="css/prism2.css" rel="stylesheet"><style type="text/css">.phase2 {
+	list-style: none;
+}
+.phase3 {
+	padding: 0px;
+}
+.phase4 {
+	display: flex;
+}
+.phase5 {
+	background: #4286f4;
+}
+.phase6 {
+	padding: 1em;
+}
+.phase7 > li {
+	background: #F0F0F0;
+	padding: 0.5em;
+}
+.phase8 > li {
+	margin-right: 0.3em;
+}
+.phase9 > li {
+	border-radius: 3px;
+}
 
-			.phase5, .phase6, .phase7, .phase8, .phase9 {
-				margin: 0em;
-			}
-		</style>
-	</head>
-	<body>
-		<h1>
-			<center>Flexbox application</center>
-		</h1>
-
-		<div class='box'>
-			As mentioned earlier, flexbox relies on the concepts of rows and columns for laying out your site.
-			<br/>
-			Why not create a simple menubar?
-			<br/>
-			Let's start off with a simple unordered list with few list items:
-			
-			<pre class="line-numbers"><code class="language-html">&#x3C;ul&#x3E;
+.phase5, .phase6, .phase7, .phase8, .phase9 {
+	margin: 0em;
+}</style></head><body><div><nav class="main-menu"><a href="index.html">Contents</a><a href="html-basics.html">HTML - Basics</a><a href="flexbox-intro.html">Flexbox - Intro</a><a href="flexbox-row.html">Flexbox - Row</a><a href="flexbox-col.html">Flexbox - Column</a><a href="flexbox-application.html">Flexbox - Application</a></nav></div><h1><center>Flexbox application</center></h1><div class="box">As mentioned earlier, flexbox relies on the concepts of rows and columns for laying out your site.<br>Why not create a simple menubar?<br>Let's start off with a simple unordered list with few list items:<pre class="line-numbers language-html"><code>&#x3C;ul&#x3E;
 &#09;&#x3C;li&#x3E;Home&#x3C;/li&#x3E;
 	&#x3C;li&#x3E;Blog&#x3C;/li&#x3E;
 	&#x3C;li&#x3E;Downloads&#x3C;/li&#x3E;
 	&#x3C;li&#x3E;About&#x3C;/li&#x3E;
-&#x3C;/ul&#x3E;</code></pre>
-			
-		</div>
-		<div class='phase'>
-			<ul>
-				<li>Home</li>
-				<li>Blog</li>
-				<li>Downloads</li>
-				<li>About</li>
-			</ul>
-		</div>
-		<div class='box'>
-			Let's remove the bullet points from the list by adding the CSS rule to the <code>ul</code>:
-			<pre class='language-css'><code>list-style: none;</code></pre>
-		</div>
-		<div class='phase'>
-			<ul class='phase2'>
-				<li>Home</li>
-				<li>Blog</li>
-				<li>Downloads</li>
-				<li>About</li>
-			</ul>
-		</div>
-		<div class='box'>
-			Now remove the spacing on the left side by adding the CSS rule to the <code>ul</code>:
-			<pre class='language-css'><code>padding: 0px;</code></pre>
-		</div>
-		<div class='phase'>
-			<ul class='phase2 phase3'>
-				<li>Home</li>
-				<li>Blog</li>
-				<li>Downloads</li>
-				<li>About</li>
-			</ul>
-		</div>
-		<div class='box'>
-			Wouldn't it be nice to have the items placed horizontally in a single row?
-			<br/>
-			Voil&#xE0;! Flexbox is here to arrange the list items (<code>li</code>) into a single row.
-			<br/>
-			<br/>
-			Let's add the CSS rule to the <code>ul</code> to turn it into a flexbox container:
-			<pre class='language-css'><code>display: flex;</code></pre>
-			<br/>
-			And when that's done, the html elements inside it, all the list items (<code>li</code>) in this case, will become flexbox items automatically.
-			<br/>
-			Then we can control the behavior of the items and put them in a single row or column.
-			<br/>
-			However, by default, flexbox items are packed inside a single row. Like this:
-		</div>
-		<div class='phase'>
-			<ul class='phase2 phase3 phase4'>
-				<li>Home</li>
-				<li>Blog</li>
-				<li>Downloads</li>
-				<li>About</li>
-			</ul>
-		</div>
-		<div class='box'>
-			Let's add background color to the menu.
-			<br/>
-			To do this, add the CSS rule to the <code>ul</code>:
-			<pre class='language-css'><code>background: #4286f4;</code></pre>
-			The color can be anything you desire. I picked a nice variant of blue.
-			<br/>
-		</div>
-		<div class='phase'>
-			<ul class='phase2 phase3 phase4 phase5'>
-				<li>Home</li>
-				<li>Blog</li>
-				<li>Downloads</li>
-				<li>About</li>
-			</ul>
-		</div>
-		<div class='box'>
-			Maybe some padding would be cool!
-			Add the CSS rule to the <code>ul</code>:
-			<pre class='language-css'><code>padding: 1em;</code></pre>
-		</div>
-		<div class='phase'>
-			<ul class='phase2 phase3 phase4 phase5 phase6'>
-				<li>Home</li>
-				<li>Blog</li>
-				<li>Downloads</li>
-				<li>About</li>
-			</ul>
-		</div>
-		<div class='box'>
-			How about boxifying the list items?
-			<br/>
-			Simply set the CSS rules to the <code>li</code> in the <code>ul</code>:
-			<pre class='language-css line-numbers'><code>background: #F0F0F0;
-padding: 0.5em;</code></pre>
-		</div>
-		<div class='phase'>
-			<ul class='phase2 phase3 phase4 phase5 phase6 phase7'>
-				<li>Home</li>
-				<li>Blog</li>
-				<li>Downloads</li>
-				<li>About</li>
-			</ul>
-		</div>
-		<div class='box'>
-			A little space to the right side of each menu item wouldn't be bad.
-			<br/>
-			Add the CSS rule to the <code>li</code> in <code>ul</code>:
-			<pre class='language-css'><code>margin-right: 0.3em;</code></pre>
-		</div>
-		<div class='phase'>
-			<ul class='phase2 phase3 phase4 phase5 phase6 phase7 phase8'>
-				<li>Home</li>
-				<li>Blog</li>
-				<li>Downloads</li>
-				<li>About</li>
-			</ul>
-		</div>
-		<div class='box'>
-			Maybe some roundness to the edges?
-			<br/>
-			Applying the CSS rule to the <code>li</code> in <code>ul</code> would do the job:
-			<pre class='language-css'><code>border-radius: 3px;</code></pre>
-		</div>
-		<div class='phase'>
-			<ul class='phase2 phase3 phase4 phase5 phase6 phase7 phase8 phase9'>
-				<li>Home</li>
-				<li>Blog</li>
-				<li>Downloads</li>
-				<li>About</li>
-			</ul>
-		</div>
-		<div class='box'>
-			You can add anchor tags in the <code>li</code> to turn the menu items into links.
-			<br/>
-			The HTML code would look something like this:
-			<pre class='line-numbers language-html'><code>&#x3C;ul&#x3E;
+&#x3C;/ul&#x3E;</code></pre></div><div><ul><li>Home</li><li>Blog</li><li>Downloads</li><li>About</li></ul></div><div class="box">Let's remove the bullet points from the list by adding the CSS rule to the <code>ul:</code><pre class="language-css"><code>list-style: none;</code></pre></div><div><ul class="phase2"><li>Home</li><li>Blog</li><li>Downloads</li><li>About</li></ul></div><div class="box">Now remove the spacing on the left side by adding the CSS rule to the <code>ul:</code><pre class="language-css"><code>padding: 0px;</code></pre></div><div><ul class="phase2 phase3"><li>Home</li><li>Blog</li><li>Downloads</li><li>About</li></ul></div><div class="box">Wouldn't it be nice to have the items placed horizontally in a single row?<br>Voil&#xE0;! Flexbox is here to arrange the list items (<code>li</code>) into a single row.<br><br>Let's add the CSS rule to the <code>ul</code>to turn it into a flexbox container:<pre class="language-css"><code>display: flex;</code></pre><br>And when that's done, the html elements inside it, all the list items (<code>li</code>) in this case, will become flexbox items automatically.<br>Then we can control the behavior of the items and put them in a single row or column.<br>However, by default, flexbox items are packed inside a single row. Like this:</div><div><ul class="phase2 phase3 phase4"><li>Home</li><li>Blog</li><li>Downloads</li><li>About</li></ul></div><div class="box">Let's add background color to the menu.<br>To do this, add the CSS rule to the <code>ul:</code><pre class="language-css"><code>background: #4286f4;</code></pre>The color can be anything you desire. I picked a nice variant of blue.<br></div><div><ul class="phase2 phase3 phase4 phase5"><li>Home</li><li>Blog</li><li>Downloads</li><li>About</li></ul></div><div class="box">Maybe some padding would be cool!
+Add the CSS rule to the <code>ul:</code><pre class="language-css"><code>padding: 1em;</code></pre></div><div><ul class="phase2 phase3 phase4 phase5 phase6"><li>Home</li><li>Blog</li><li>Downloads</li><li>About</li></ul></div><div class="box">How about boxifying the list items?<br>Simply set the CSS rules to the <code>li </code>in the <code>ul:</code><pre class="language-css"><code>background: #F0F0F0;
+padding: 0.5em;</code></pre></div><div><ul class="phase2 phase3 phase4 phase5 phase6 phase7"><li>Home</li><li>Blog</li><li>Downloads</li><li>About</li></ul></div><div class="box">A little space to the right side of each menu item wouldn't be bad.<br>Add the CSS rule to the <code>li </code>in <code>ul:</code><pre class="language-css"><code>margin-right: 0.3em;</code></pre></div><div><ul class="phase2 phase3 phase4 phase5 phase6 phase7 phase8"><li>Home</li><li>Blog</li><li>Downloads</li><li>About</li></ul></div><div class="box">Maybe some roundness to the edges?<br>Applying the CSS rule to the <code>li </code>in <code>ul </code>would do the job:<pre class="language-css"><code>border-radius: 3px;</code></pre></div><div><ul class="phase2 phase3 phase4 phase5 phase6 phase7 phase8 phase9"><li>Home</li><li>Blog</li><li>Downloads</li><li>About</li></ul></div><div class="box">You can add anchor tags in the <code>li </code>to turn the menu items into links.<br><The>HTML code would look something like this:</The><pre class="language-html"><code>&#x3C;ul&#x3E;
 &#x9;&#x3C;li&#x3E;
 &#x9;&#x9;&#x3C;a href=&#x27;#&#x27;&#x3E;Home&#x3C;/a&#x3E;
 &#x9;&#x3C;/li&#x3E;
@@ -200,24 +46,4 @@ padding: 0.5em;</code></pre>
 &#x9;&#x3C;li&#x3E;
 &#x9;&#x9;&#x3C;a href=&#x27;#&#x27;&#x3E;About&#x3C;/a&#x3E;
 &#x9;&#x3C;/li&#x3E;
-&#x3C;/ul&#x3E;</code></pre>
-		</div>
-		<div class='phase'>
-			<ul class='phase2 phase3 phase4 phase5 phase6 phase7 phase8 phase9'>
-				<li>
-					<a href='#'>Home</a>
-				</li>
-				<li>
-					<a href='#'>Blog</a>
-				</li>
-				<li>
-					<a href='#'>Downloads</a>
-				</li>
-				<li>
-					<a href='#'>About</a>
-				</li>
-			</ul>
-		</div>
-		<script src="prism2.js"></script>
-	</body>
-</html>
+&#x3C;/ul&#x3E;</code></pre></div><div><ul class="phase2 phase3 phase4 phase5 phase6 phase7 phase8 phase9"><li><a href="#">Home</a></li><li><a href="#">Blog</a></li><li><a href="#">Downloads</a></li><li><a href="#">About</a></li></ul></div><script src="js/prism2.js"></script></body></html>
