--- a/flexbox-intro.html
+++ b/flexbox-intro.html
@@ -1,60 +1,7 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Flexbox Intro</title>
-		<link rel='stylesheet' href='base.css'>
-		<link href="prism2.css" rel="stylesheet">
-		<style type='text/css'>
-			div.box > p:nth-child(2) {
-				margin: 0em;
-			}
+<!DOCTYPE html><html><head><title>Flexbox Intro</title><link rel="stylesheet" href="css/base.css"><link href="css/prism2.css" rel="stylesheet"><style type="text/css">div.box > p:nth-child(2) {
+	margin: 0em;
+}
 
-			ul {
-				margin: 0em;
-			}
-		</style>
-	</head>
-	<body>
-		<h1>
-			<center>Flexbox intro</center>
-		</h1>
-
-		<div class='box'>
-			<p>
-				Whenever you need to create a layout based on rows and columns, flexbox is your best bet.
-			</p>
-			<p>
-				The concept of flexbox is simple:
-			</p>
-			<ul>
-				<li>You have a flexbox container.</li>
-				<li>The immediate children in the flexbox container are known as flexbox items.</li>
-			</ul>
-			<br>
-			Here's take a look at the example below:
-		</div>
-
-		<div class='container'>
-			<div>First</div>
-			<div>Second</div>
-			<div>Third</div>
-			<div>Fourth</div>
-			<div>Fifth</div>
-		</div>
-
-		<div class='box'>
-			The <b><span class='blue'>blue box</span></b> is the flexbox container and the light gray boxes are all flexbox items.
-			<br/>
-			The <b><span class='gray'>gray boxes</span></b> are automatically interpreted as flexbox items as they are directly inside the flexbox container.
-			<p>
-				Set the CSS rule to an HTML element to make it a flexbox container:
-				<pre class='language-css'><code>display: flex;</code></pre>
-			</p>
-			<p>
-				Now that you know the very basics, let's move over to do some cool stuff!
-			</p>
-		</div>
-
-		<script src="prism2.js"></script>
-	</body>
-</html>
+ul {
+	margin: 0em;
+}</style></head><body><div><nav class="main-menu"><a href="index.html">Contents</a><a href="html-basics.html">HTML - Basics</a><a href="flexbox-intro.html">Flexbox - Intro</a><a href="flexbox-row.html">Flexbox - Row</a><a href="flexbox-col.html">Flexbox - Column</a><a href="flexbox-application.html">Flexbox - Application</a></nav></div><h1><center>Flexbox intro</center></h1><div class="box"><p>Whenever you need to create a layout based on rows and columns, flexbox is your best bet.</p><p>The concept of flexbox is simple:</p><ul><li>You have a flexbox container.</li><li>The immediate children in the flexbox container are known as flexbox items.</li></ul><br>Here's take a look at the example below:</div><div class="container"><div>First</div><div>Second</div><div>Third</div><div>Fourth</div><div>Fifth</div></div><div class="box">The <b><span class="blue"><blue>box</blue></span></b>is the flexbox container and the light gray boxes are all flexbox items.<br>The <b><span class="gray"><gray>boxes</gray></span></b>are automatically interpreted as flexbox items as they are directly inside the flexbox container.<p>Set the CSS rule to an HTML element to make it a flexbox container:<pre class="language-css"><code>display: flex;</code></pre></p>Now that you know the very basics, let's move over to do some cool stuff!</div><script src="js/prism2.js"></script></body></html>
