--- a/sorry.html
+++ b/sorry.html
@@ -10,6 +10,6 @@
 }
 h1 {
 	color: white;
-	font-size: 5rem;
+	font-size: 80px;
 	margin: 0em 3em 0em 3em;
 }</style></head><body><h1>Eyan says sorry to you, Paglu!</h1></body></html>
