--- a/sorry.html
+++ b/sorry.html
@@ -12,4 +12,9 @@ h1 {
 	color: white;
 	font-size: 80px;
 	margin: 0em 3em 0em 3em;
+}
+@media only screen and (max-width: 500px) {
+    h1 {
+		margin: 0em 1.5em 0em 1.5em;
+	}
 }</style></head><body><h1>Eyan says sorry to you, Paglu!</h1></body></html>
