--- a/sorry.html
+++ b/sorry.html
@@ -13,8 +13,8 @@ h1 {
 	font-size: 80px;
 	margin: 0em 3em 0em 3em;
 }
-@media only screen and (max-width: 500px) {
-    h1 {
-		margin: 0em 1.5em 0em 1.5em;
+@media (max-width: 600px) {
+	h1 {
+		margin: 0em 1em 0em 1em;
 	}
 }</style></head><body><h1>Eyan says sorry to you, Paglu!</h1></body></html>
