--- a/sorry.html
+++ b/sorry.html
@@ -16,5 +16,6 @@ h1 {
 @media (max-width: 600px) {
 	h1 {
 		margin: 0em 1em 0em 1em;
+		font-size: 90px;
 	}
 }</style></head><body><h1>Eyan says sorry to you, Paglu!</h1></body></html>
