--- a/layout-one.html
+++ b/layout-one.html
@@ -14,6 +14,11 @@
 	color: white;
 	margin-right: 2em;
 	text-decoration: none;
+	padding: 0.5em 1em 0.5em 1em;
+	border-radius: 2px;
+}
+#main-menu a:hover {
+	background: rgb(51, 79, 132);
 }
 
 #content {
@@ -29,7 +34,7 @@
 	margin-bottom: 0.5em;
 	color: #666;
 	text-decoration: none;
-	padding: 5px;
+	padding: 0.5em;
 	border: 1px solid rgb(233, 235, 238);
 }
 #sidebar-left a:hover {
@@ -50,4 +55,8 @@
 
 #sidebar-right {
 	flex-grow: 1.2;
-}</style></head><body><nav id="main-menu"><a href="">Home</a><a href="">Tutorials</a><a href="">About me</a></nav><div id="content"><div id="sidebar-left"><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a></div><div id="midbar"><div class="box"></div><div class="box"></div><div class="box"></div></div><div id="sidebar-right"><div class="box"></div><div class="box"></div><div class="box"></div></div></div><script src="js/prism2.js"></script></body></html>
+}
+.heart {
+	width: 14px;
+	height: 14px;
+}</style></head><body><nav id="main-menu"><a href="">Home</a><a href="">Tutorials</a><a href="">About me</a></nav><div id="content"><div id="sidebar-left"><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a></div><div id="midbar"><div class="box">Love you Towni <img class="heart" src="icons/heart.svg"></div><div class="box">You mean everything to me <img class="heart" src="icons/heart.svg"></div><div class="box">Shunamuni <img class="heart" src="icons/heart.svg"></div></div><div id="sidebar-right"><div class="box">Raagi babu <img class="heart" src="icons/heart.svg"></div><div class="box">Paglu <img class="heart" src="icons/heart.svg"></div><div class="box">Picchi <img class="heart" src="icons/heart.svg"></div></div></div><script src="js/prism2.js"></script></body></html>
