Modified title of homepage

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><title>Flexbox Intro</title><link rel="stylesheet" href="css/base.css"><style type="text/css">ol a {
+<!DOCTYPE html><html><head><title>Index</title><link rel="stylesheet" href="css/base.css"><style type="text/css">ol a {
 	color: #333;
 	text-decoration: none;
 }
