Added new layout

--- a/layout-facebook.html
+++ b/layout-facebook.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><title>Layout one</title><link href="css/prism2.css" rel="stylesheet"><style type="text/css">body {
+<!DOCTYPE html><html><head><title>Facebook</title><style type="text/css">body {
 	padding: 0px;
 	margin: 0px;
 	font-family: Arial;
@@ -59,4 +59,4 @@
 .heart {
 	width: 14px;
 	height: 14px;
-}</style></head><body><nav id="main-menu"><a href="">Home</a><a href="">Tutorials</a><a href="">About me</a></nav><div id="content"><div id="sidebar-left"><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a></div><div id="midbar"><div class="box">Love you Towni <img class="heart" src="icons/heart.svg"></div><div class="box">You mean everything to me <img class="heart" src="icons/heart.svg"></div><div class="box">Shunamuni <img class="heart" src="icons/heart.svg"></div></div><div id="sidebar-right"><div class="box">Raagi babu <img class="heart" src="icons/heart.svg"></div><div class="box">Paglu <img class="heart" src="icons/heart.svg"></div><div class="box">Picchi <img class="heart" src="icons/heart.svg"></div></div></div><script src="js/prism2.js"></script></body></html>
+}</style></head><body><nav id="main-menu"><a href="">Home</a><a href="">Tutorials</a><a href="">About me</a></nav><div id="content"><div id="sidebar-left"><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a><a href="">Lorem Ipsum</a></div><div id="midbar"><div class="box">Love you Towni <img class="heart" src="icons/heart.svg"></div><div class="box">You mean everything to me <img class="heart" src="icons/heart.svg"></div><div class="box">Shunamuni <img class="heart" src="icons/heart.svg"></div></div><div id="sidebar-right"><div class="box">Raagi babu <img class="heart" src="icons/heart.svg"></div><div class="box">Paglu <img class="heart" src="icons/heart.svg"></div><div class="box">Picchi <img class="heart" src="icons/heart.svg"></div></div></div></body></html>
