--- a/flexbox-application.html
+++ b/flexbox-application.html
@@ -26,7 +26,7 @@
 
 .phase5, .phase6, .phase7, .phase8, .phase9 {
 	margin: 0em;
-}</style></head><body><div><nav class="main-menu"><a href="index.html">Contents</a><a href="html-basics.html">HTML - Basics</a><a href="flexbox-intro.html">Flexbox - Intro</a><a href="flexbox-row.html">Flexbox - Row</a><a href="flexbox-col.html">Flexbox - Column</a><a class="selected" href="flexbox-application.html">Flexbox - Application</a></nav></div><h1><center>Flexbox application</center></h1><div><h3>0. Unordered List</h3></div><div class="box">As mentioned earlier, flexbox relies on the concepts of rows and columns for laying out your site.<br>Why not create a simple menubar?<br>Let's start off with a simple unordered list with few list items:<pre class="line-numbers language-html"><code>&#x3C;ul&#x3E;
+}</style></head><body><div><nav class="main-menu"><a href="index.html">Contents</a><a href="html-basics.html">HTML - Basics</a><a href="flexbox-intro.html">Flexbox - Intro</a><a href="flexbox-row.html">Flexbox - Row</a><a href="flexbox-col.html">Flexbox - Column</a><a class="selected" href="flexbox-application.html">Flexbox - Application</a><a href="cpp-pointers.html">C++ Pointers</a></nav></div><h1><center>Flexbox application</center></h1><div><h3>0. Unordered List</h3></div><div class="box">As mentioned earlier, flexbox relies on the concepts of rows and columns for laying out your site.<br>Why not create a simple menubar?<br>Let's start off with a simple unordered list with few list items:<pre class="line-numbers language-html"><code>&#x3C;ul&#x3E;
 &#09;&#x3C;li&#x3E;Home&#x3C;/li&#x3E;
 	&#x3C;li&#x3E;Blog&#x3C;/li&#x3E;
 	&#x3C;li&#x3E;Downloads&#x3C;/li&#x3E;
